<resources>
    <string name="app_name">Rally Speedrun</string>
    <string name="commencer">COMMENCER</string>
    <string name="fin_dialogue_titre">BRAVO!!!!</string>
    <string name="fin_dialogue_positif">Ajouter l\'essai</string>
    <string name="titre_dialog_permission">Permissions demandées</string>
    <string name="body_dialog_permission">Comme il s\'agit d\'une application gérant votre activité physique en s\'assurant que vous visitez physiquement des emplacements, il est nécessaire de pouvoir savoir ou vous êtes. Vos données sont en sécurité et ne seront pas vendus.</string>
    <string name="positif_dialog_base">OK</string>
    <string name="body_dialog_refuse">La localisation est nécessaire pour le fonctionnement de l\'application. Veuillez activer la localisation dans les paramètres de votre appareil pour continuer</string>
    <string name="titre_dialog_refuse">Activer la localisation</string>
    <string name="nb_pas">Nombre de pas : %1$s</string>
    <string name="label_temps">Temps : </string>
    <string name="label_logo">Logo</string>
    <string name="mes_parcours">MES PARCOURS</string>
    <string name="ajout_parcours">Ajouter un parcours</string>
    <string name="annuler_choix">ANNULER CHOIX</string>
    <string name="confirmer_choix">CONFIRMER CHOIX</string>
    <string name="ajouter_point_dialog">AJOUTER</string>
    <string name="annuler_ajout">ANNULER</string>
    <string name="titre_ajout_point_dialog">Ajouter point</string>
    <string name="description_ajout_point_dialog">Veuillez saisir le nom du point si désiré</string>
    <string name="titre_ajout_parcours_dialogue">Ajouter parcours</string>
    <string name="description_ajout_parcours_dialog">Veuillez saisir le nom du parcours</string>
    <string name="erreur_nom_parcours_vide">Le nom du parcours ne peut être vide</string>
    <string name="label_choix_parcours">Choix du parcours</string>
    <string name="erreur_liste_points_vide">Le parcours doit contenir au moins un point</string>
    <string name="mes_parcours_titre">Mes parcours</string>
    <string name="meilleur_temps_parcours">Meilleur temps: %1$s</string>
    <string name="label_nom_parcours">Nom du parcours</string>
    <string name="label_meilleur_temps">Meilleur temps</string>
    <string name="label_nombre_essais_parcours">Nombre total d\'essais</string>
    <string name="label_points">Points</string>
    <string name="points_details_position">%1$s \nLatitude %2$s \nLongitude %3$s\n</string>
    <string name="label_liste_essais">Essais</string>
    <string name="meilleur_temps_vide">Aucun temps n\'existe pour ce parcours</string>
    <string name="aucun_essai_existant">Aucun essai existe pour ce parcours</string>
    <string name="distance">%1$s km</string>
    <string name="label_date_essai">Date</string>
    <string name="label_temps_total">Durée</string>
    <string name="label_numero_essai">Tentative</string>
    <string name="points_details_nom">%1$s | </string>
    <string name="label_distance">Distance</string>
    <string name="barre">|</string>
    <string name="difference_temps">%1$s%2$s</string>
    <string name="titre_details_essai">Détails tentative %1$s</string>
</resources>